Working on responsiveness
need to fix the line one the home page

--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@
             --flower: rgb(134, 43, 144);
         }
         
-        @media (min-width:930px) {
+       
+        
+@media screen , (min-width:300px) and (max-width:375px) {
+
             * {
                 padding: 0;
                 margin: 0;
@@ -48,29 +51,29 @@
                 filter: hue-rotate(150deg);
                 float: left;
                 margin-top: 5px;
-                margin-right: 3em;
-                height: 5em;
-                width: 5em;
+                margin-right: 1em;
+                height: 3em;
+                width: 3em;
             }
             .links {
-                margin-right: 5em;
-                float: right;
+                margin-top: 10px;
+                margin-right: 4em;
                 justify-content: center;
-                align-items: center;
+                align-self: center;
             }
             li {
-                float: right;
+                
                 display: block;
                 text-decoration: none;
             }
             li a {
-                left: 5em;
-                padding: 1em;
+                margin-right: 10px;
+                padding: 5px;
                 color: var(--gray);
                 float: right;
                 font-family: 'Playfair Display', serif;
                 display: block;
-                font-size: 2em;
+                font-size: 1em;
                 text-decoration: none;
                 text-align: center;
                 text-shadow: 1px white;
@@ -83,7 +86,7 @@
                 align-self: center;
                 order: 1;
                 position: relative;
-                font-size: 3.5em;
+                font-size: 1.5em;
                 font-family: 'Playfair Display', serif;
                 z-index: 2;
             }
@@ -92,7 +95,7 @@
                 align-self: center;
                 order: 2;
                 position: relative;
-                font-size: 2.5em;
+                font-size: 1em;
             }
             .button1 {
                 position: relative;
@@ -102,20 +105,31 @@
                 text-decoration: none;
                 font-family: 'Dancing Script', cursive;
                 align-self: center;
-                font-size: 4em;
+                font-size: 2em;
                 text-shadow: 1px 1px black;
+            }
+            .line {
+                width: 6em;
+                position: absolute;
+                top: 64%;
+                left: 5em;
+                background: none;
+                transform: rotate(3deg);
+                transform: scaleX(-1);
+                transform: scaleY(-1);
             }
             .circle {
                 box-shadow: 1px 2px 10px 1px black;
                 top: 18%;
+                left: 1em;
                 border: 5px solid var(--cafe);
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 background-color: rgba(166, 165, 122, 0.90);
                 position: absolute;
-                height: 31em;
-                width: 31em;
+                height: 15em;
+                width: 15em;
                 border-radius: 50%;
                 z-index: 3;
             }
@@ -136,7 +150,7 @@
             .forest {
                 filter: sepia(40%) hue-rotate(31deg) saturate(55%);
                 margin-left: 5%;
-                height: 40em;
+                height: 60em;
                 width: 90%;
             }
             .runes {
@@ -165,155 +179,323 @@
                 transform: scaleX(-1);
                 transform: scaleY(-1);
             }
+        
+        .circle2 {
+        box-shadow: 1px 2px 10px 1px black;
+        top: 18%;
+        left: 2em;
+        border: 5px solid var(--cafe);
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(166, 165, 122, 0.90);
+        position: absolute;
+        height: 20em;
+        width: 20em;
+        border-radius: 50%;
+        z-index: 3;
+        }
+}
 
-  .circle2 {
-    box-shadow: 1px 2px 10px 1px black;
-    top: 18%;
-    left: 2em;
-    border: 5px solid var(--cafe);
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(166, 165, 122, 0.90);
-    position: absolute;
-    height: 20em;
-    width: 20em;
-    border-radius: 50%;
-    z-index: 3;
+@media screen and (min-width:930px) {
+    * {
+        padding: 0;
+        margin: 0;
+    }
+    body {
+        background: black;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    header {
+        background: black;
+        position: fixed;
+        width: 100%;
+        display: block;
+        justify-content: space-between;
+        align-items: center;
+        transition: 0.6s;
+        z-index: 10000;
+    }
+    header.sticky {
+        padding-bottom: .5rem;
+        position: fixed;
+        background-color: black;
+        height: 7em;
+        justify-content: space-between;
+    }
+    header.sticky li a {
+        color: white;
+        position: relative;
+        padding-right: 1em;
+        text-shadow: 3px white;
+    }
+    .hand {
+        filter: hue-rotate(150deg);
+        float: left;
+        margin-top: 5px;
+        margin-right: 3em;
+        height: 5em;
+        width: 5em;
+    }
+    .links {
+        margin-right: 5em;
+        float: right;
+        justify-content: center;
+        align-items: center;
+    }
+    li {
+        float: right;
+        display: block;
+        text-decoration: none;
+    }
+    li a {
+        left: 5em;
+        padding: 1em;
+        color: var(--gray);
+        float: right;
+        font-family: 'Playfair Display', serif;
+        display: block;
+        font-size: 2em;
+        text-decoration: none;
+        text-align: center;
+        text-shadow: 1px white;
+    }
+    h1 {
+        top: -10%;
+        margin-top: 1em;
+        color: var(--blue);
+        text-shadow: 1px 2px black;
+        align-self: center;
+        order: 1;
+        position: relative;
+        font-size: 3.5em;
+        font-family: 'Playfair Display', serif;
+        z-index: 2;
+    }
+    p {
+        top: -10%;
+        align-self: center;
+        order: 2;
+        position: relative;
+        font-size: 2.5em;
+    }
+    .button1 {
+        position: relative;
+        top: -5%;
+        color: var(--red);
+        order: 3;
+        text-decoration: none;
+        font-family: 'Dancing Script', cursive;
+        align-self: center;
+        font-size: 4em;
+        text-shadow: 1px 1px black;
+    }
+    .circle {
+        box-shadow: 1px 2px 10px 1px black;
+        top: 18%;
+        border: 5px solid var(--cafe);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: rgba(166, 165, 122, 0.90);
+        position: absolute;
+        height: 31em;
+        width: 31em;
+        border-radius: 50%;
+        z-index: 3;
+    }
+    .circle1 {
+        box-shadow: 1px 2px 10px 1px black;
+        top: 18%;
+        border: 5px solid var(--plum);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: rgba(166, 165, 122, 0.90);
+        position: absolute;
+        height: 31em;
+        width: 31em;
+        border-radius: 50%;
+        z-index: 3;
+    }
+    .forest {
+        filter: sepia(40%) hue-rotate(31deg) saturate(55%);
+        margin-left: 5%;
+        height: 40em;
+        width: 90%;
+    }
+    .runes {
+        height: 100vh;
+        width: 100vw;
+    }
+    .about_h1 {
+        top: -20%;
+        text-shadow: 1px 2px black;
+        letter-spacing: .05em;
+    }
+    .p2 {
+        width: 25em;
+        top: -15%;
+        font-family: 'Playfair Display', serif;
+        font-size: 1em;
+        text-align: center;
+        letter-spacing: .05em;
+    }
+    .line {
+        position: absolute;
+        top: 64%;
+        left: 9em;
+        background: none;
+        transform: rotate(3deg);
+        transform: scaleX(-1);
+        transform: scaleY(-1);
+    }
+
+.circle2 {
+box-shadow: 1px 2px 10px 1px black;
+top: 18%;
+left: 2em;
+border: 5px solid var(--cafe);
+display: flex;
+flex-direction: column;
+background-color: rgba(166, 165, 122, 0.90);
+position: absolute;
+height: 20em;
+width: 20em;
+border-radius: 50%;
+z-index: 3;
 }
 .con_bg {
-    height: 100%;
-    width: 100%;
-    background: url(purple-3102305_1920.jpg);
+height: 100%;
+width: 100%;
+background-size: contain;
+background: url(purple-3102305_1920.jpg);
 }
 
 .con_1 {
-    position: relative;
-    top: .5em;
+position: relative;
+top: .5em;
 }
 .con_form {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    top: 12em;
-    left: 70em;
-    background: rgba(134, 43, 144, .65);
-    height: 30em;
-    width: 20em;
-    border-radius: 5%;
+position: absolute;
+display: flex;
+justify-content: center;
+align-content: center;
+top: 12em;
+left: 70em;
+background: rgba(134, 43, 144, .65);
+height: 30em;
+width: 20em;
+border-radius: 5%;
 }
 .con_header {
-    position: relatives;
-    margin-bottom: 1em;
-    margin-left: 1.2em;
-    color: var(--blue);
+position: relatives;
+margin-bottom: 1em;
+margin-left: 1.2em;
+color: var(--blue);
 }
 .form_info {
-    position: relative;
-    margin-top: 2em;
-    margin-left: 3em;
-    height: 100%;
-    width: 100%;
+position: relative;
+margin-top: 2em;
+margin-left: 3em;
+height: 100%;
+width: 100%;
 
 }
 .inputs {
-    margin-top: 1em;
+margin-top: 1em;
 }
 input {
-    color: white;
-    margin-bottom: 5em;
-    border: none;
-    outline: none;
-    background: transparent;
-    border-bottom: 2px solid white;
+color: white;
+margin-bottom: 5em;
+border: none;
+outline: none;
+background: transparent;
+border-bottom: 2px solid white;
 }
 .name {
 
-    margin-bottom: 2em;
+margin-bottom: 2em;
 }
 .email {
-    margin-bottom: 2em;
+margin-bottom: 2em;
 }
 .text {
-    margin-bottom: 2em;
+margin-bottom: 2em;
 }
 .con_data {
-    margin-top: 3em;
+margin-top: 3em;
 }
 
 h6 {
-    top: 6em;
-    margin-top: 3em;
-    font-size: 1em;
-    align-self: center;
-    justify-self: center;
-    color: white;
+top: 6em;
+margin-top: 3em;
+font-size: 1em;
+align-self: center;
+justify-self: center;
+color: white;
 
 }
 .icon_bubble {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    right: 8em;
-    top: 35em;
-    height: 8em;
-    width: 8em;
-    background: rgba(166, 165, 122, 0.90);
-    z-index: 2;
-    border-radius: 50%;
-    border: 3px solid var(--cafe);
+display: flex;
+justify-content: center;
+align-items: center;
+position: absolute;
+right: 8em;
+top: 35em;
+height: 8em;
+width: 8em;
+background: rgba(166, 165, 122, 0.90);
+z-index: 2;
+border-radius: 50%;
+border: 3px solid var(--cafe);
 }
 .icons {
-    color: var(--red);
-    position: relative;
+color: var(--red);
+position: relative;
 }
 .line2 {
 
-    color: var(--red);
-    position: absolute;
-    top: 60%;
-    left: 9em;
-    background: none;
-    transform: rotate(3deg);
-    transform: scaleX(-1);
-    transform: scaleY(-1);
+color: var(--red);
+position: absolute;
+top: 60%;
+left: 9em;
+background: none;
+transform: rotate(3deg);
+transform: scaleX(-1);
+transform: scaleY(-1);
 
 }
 .button2 {
-                position: relative;
-                top: -5%;
-                color: var(--red);
-                order: 3;
-                text-decoration: none;
-                font-family: 'Dancing Script', cursive;
-                align-self: center;
-                font-size: 4em;
-                text-shadow: 1px 1px black;
+        position: relative;
+        top: -5%;
+        color: var(--red);
+        order: 3;
+        text-decoration: none;
+        font-family: 'Dancing Script', cursive;
+        align-self: center;
+        font-size: 4em;
+        text-shadow: 1px 1px black;
 }
 .button3 {
-    position: relative;
-    top: 2em;
-    left: -1em;
-    background: transparent;
-    border: none;
-    font-family: 'Dancing Script', cursive;
-    color: var(--gray);
-    font-size: 2em;
+position: relative;
+top: 2em;
+left: -1em;
+background: transparent;
+border: none;
+font-family: 'Dancing Script', cursive;
+color: var(--gray);
+font-size: 2em;
 }
 .shop_bg {
-    background: var(--gray);
-    height: 100vh;
-    width: 100vw;
+background: var(--gray);
+height: 100vh;
+width: 100vw;
 }
 .shop_prompt {
-    margin-top: 5em;
-    font-size: 1em;
-    color: wheat;
+margin-top: 5em;
+font-size: 1em;
+color: wheat;
 }
-        }
-        
-        @media screen and (min-width:320px) {
-
-    
 }
