--- a/style.css
+++ b/style.css
@@ -142,8 +142,8 @@
                 justify-content: center;
                 background-color: rgba(166, 165, 122, 0.90);
                 position: absolute;
-                height: 31em;
-                width: 31em;
+                height: 20em;
+                width: 20em;
                 border-radius: 50%;
                 z-index: 3;
             }
@@ -153,7 +153,8 @@
                 height: 60em;
                 width: 90%;
             }
-            .runes {
+            .tarot {
+                background-size: contain;
                 height: 100vh;
                 width: 100vw;
             }
@@ -166,7 +167,7 @@
                 width: 25em;
                 top: -15%;
                 font-family: 'Playfair Display', serif;
-                font-size: 1em;
+                font-size: .75em;
                 text-align: center;
                 letter-spacing: .05em;
             }
@@ -182,18 +183,148 @@
         
         .circle2 {
         box-shadow: 1px 2px 10px 1px black;
-        top: 18%;
-        left: 2em;
+        top: 25%;
+        left: 1em;
         border: 5px solid var(--cafe);
         display: flex;
         flex-direction: column;
         background-color: rgba(166, 165, 122, 0.90);
         position: absolute;
-        height: 20em;
-        width: 20em;
+        height: 10em;
+        width: 10em;
         border-radius: 50%;
         z-index: 3;
         }
+       /* .con_bg { 
+            top: 50%s;
+            background: var(--blue);
+            position: absolute;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-image: url(purple-3102305_1920.jpg);
+            height: 100vh;
+            width: 100vw;
+
+            }
+            
+            .con_1 {
+            position: relative;
+            top: .5em;
+            font-size: 1em;
+
+            }
+            .con_form {
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            top: 12em;
+            left: 70em;
+            background: rgba(134, 43, 144, .65);
+            height: 30em;
+            width: 20em;
+            border-radius: 5%;
+            }
+            .con_header {
+            position: relatives;
+            margin-bottom: 1em;
+            margin-left: 1.2em;
+            color: var(--blue);
+            font-size: 2em;
+            }
+            .form_info {
+            position: relative;
+            margin-top: 2em;
+            margin-left: 3em;
+            height: 100%;
+            width: 100%;
+            
+            }
+            .inputs {
+            margin-top: 1em;
+            }
+            input {
+            color: white;
+            margin-bottom: 5em;
+            border: none;
+            outline: none;
+            background: transparent;
+            border-bottom: 2px solid white;
+            }
+            .name {
+            
+            margin-bottom: 2em;
+            }
+            .email {
+            margin-bottom: 2em;
+            }
+            .text {
+            margin-bottom: 2em;
+            }
+            .con_data {
+            margin-top: 3em;
+            }
+            
+            h6 {
+            top: 6em;
+            margin-top: 3em;
+            font-size: 1em;
+            align-self: center;
+            justify-self: center;
+            color: white;
+            
+            }
+            .icon_bubble {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            right: 8em;
+            top: 35em;
+            height: 8em;
+            width: 8em;
+            background: rgba(166, 165, 122, 0.90);
+            z-index: 2;
+            border-radius: 50%;
+            border: 3px solid var(--cafe);
+            }
+            .icons {
+            color: var(--red);
+            position: relative;
+            }
+            .line2 {
+            
+            color: var(--red);
+            position: absolute;
+            top: 60%;
+            left: 9em;
+            background: none;
+            transform: rotate(3deg);
+            transform: scaleX(-1);
+            transform: scaleY(-1);
+            
+            }
+            .button2 {
+                    position: relative;
+                    top: -5%;
+                    color: var(--red);
+                    order: 3;
+                    text-decoration: none;
+                    font-family: 'Dancing Script', cursive;
+                    align-self: center;
+                    font-size: 4em;
+                    text-shadow: 1px 1px black;
+            }
+            .button3 {
+            position: relative;
+            top: 2em;
+            left: -1em;
+            background: transparent;
+            border: none;
+            font-family: 'Dancing Script', cursive;
+            color: var(--gray);
+            font-size: 2em;
+            }*/
 }
 
 @media screen and (min-width:930px) {
@@ -325,9 +456,9 @@
         height: 40em;
         width: 90%;
     }
-    .runes {
-        height: 100vh;
-        width: 100vw;
+    .tarot {
+        height: 90%;
+        width: 80%;
     }
     .about_h1 {
         top: -20%;
@@ -369,7 +500,6 @@ z-index: 3;
 .con_bg {
 height: 100%;
 width: 100%;
-background-size: contain;
 background: url(purple-3102305_1920.jpg);
 }
 
@@ -399,7 +529,7 @@ color: var(--blue);
 position: relative;
 margin-top: 2em;
 margin-left: 3em;
-height: 100%;
+height: 10%;
 width: 100%;
 
 }
