--- a/style.css
+++ b/style.css
@@ -610,8 +610,9 @@ position: relative;
 
 color: var(--red);
 position: absolute;
-top: 60%;
+top: 19em;
 left: 9em;
+width: 12em;
 background: none;
 transform: rotate(3deg);
 transform: scaleX(-1);
