--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-image: url(purple-3102305_1920.jpg);
-            height: 100%;
+            height: 120%;
             width: 100%;
 
             }
@@ -226,17 +226,18 @@
             left: 2.9em;
             background: rgba(134, 43, 144, .80);
             height: 30em;
-            width: 15em;
+            width: 18em;
             border-radius: 5%;
             }
             .con_header {
             position: relatives;
             margin-bottom: 1em;
-            margin-left: 1.2em;
+            margin-left: 1em;
             color: white;
             font-size: 2em;
             }
             .form_info {
+            justify-content: center;
             position: relative;
             margin-top: 2em;
             margin-left: 3em;
@@ -260,6 +261,7 @@
             margin-bottom: 2em;
             }
             .email {
+                font-size: 1em;
             margin-bottom: 2em;
             }
             .text {
@@ -270,12 +272,10 @@
             }
             
             h6 {
-            top: 6em;
+            top: 4em;
             margin-top: 3em;
             margin-bottom: 1em;
             font-size: 1em;
-            align-self: center;
-            justify-self: center;
             color: white;
             
             }
@@ -316,19 +316,24 @@
             }
             .button3 {
             position: relative;
-            top: 2em;
-            left: -2em;
+            bottom: .5em;
+            left: 3.5em;
             background: transparent;
             border: none;
             font-family: 'Dancing Script', cursive;
             color: var(--plum);
             font-size: 2em;
             }
+            .shop_bg {
+                height: 100%;
+                width: 100%;
+            }
             .soon {
                 color: white;
                 top: 25%;
                 left: 30%;
             }
+
 }
 
 @media screen and (min-width:930px) {
@@ -648,6 +653,10 @@ border: none;
 font-family: 'Dancing Script', cursive;
 color: white;
 font-size: 3em;
+}
+.shop_bg {
+    height: 100%;
+    width: 100%;
 }
 .soon {
     color: white;
