--- a/style.css
+++ b/style.css
@@ -371,8 +371,8 @@
         float: left;
         margin-top: 5px;
         margin-right: 3em;
-        height: 8em;
-        width: 8em;
+        height: 6em;
+        width: 6em;
     }
     .links {
         margin-right: 5em;
@@ -554,7 +554,7 @@ border-radius: 5%;
 position: relative;
 margin-bottom: 1em;
 margin-left: 1.2em;
-color: var(--blue);
+color: white;
 font-size: 2.5em;
 }
 .form_info {
@@ -646,8 +646,8 @@ transform: scaleY(-1);
 }
 .button3 {
 position: relative;
-top: 0em;
-left: 6em;
+top: 2em;
+left: 0em;
 background: transparent;
 border: none;
 font-family: 'Dancing Script', cursive;
